Add files that should be ignored by license check workflow

--- a/.github/license-check/license-config.json
+++ b/.github/license-check/license-config.json
@@ -15,5 +15,14 @@
       "**/*.cpp"
     ],
     "license": "./.github/license-check/header-apache2-double-slash.txt"
+  },
+  {
+    "include": [
+      "**/*.md",
+      "**/*.txt"
+    ],
+    "exclude": [
+      "**/CMakeLists.txt"
+    ]
   }
 ]
