--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,12 +35,14 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(LIBNAT20_SOURCES
     # Add the core library source files here.
     src/asn1.c
+    src/oid.c
 )
 
 set(LIBNAT20_PUB_HEADERS
     # Add the public headers here.
     # These files will be included in the generation of the API documentation.
     include/nat20/asn1.h
+    include/nat20/oid.h
 )
 
 set(LIBNAT20_TEST_SOURCES
