--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           cmake-version: '3.22.x'
       - run: |
+          sudo apt install graphviz -y
           cmake -S . -B cmake/build -DNAT20_WITH_TESTS=OFF -DNAT20_WITH_DOCS=ON
           cmake --build cmake/build --target nat20_docs
       - id: deployment
