--- a/.github/workflows/build-and-deploy-docs.yml
+++ b/.github/workflows/build-and-deploy-docs.yml
@@ -20,7 +20,9 @@ on:
       - main
 
 jobs:
+  # https://github.com/actions/upload-pages-artifact
   build:
+    # Specify runner +  build & upload the static files as an artifact
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b #v4.1.5
@@ -32,17 +34,29 @@ jobs:
           sudo apt install doxygen -y
           cmake -S . -B cmake/build -DNAT20_WITH_TESTS=OFF -DNAT20_WITH_DOCS=ON
           cmake --build cmake/build --target nat20_docs
-      - id: deployment
+      - name: Upload static files as artifact
+        id: deployment
         uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa #v3.0.1
         with:
           path: cmake/build/html/
 
+  # https://github.com/actions/deploy-pages
   deploy:
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - id: deployment
         uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e #v4.0.5
