--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(LIBNAT20_SOURCES
     # Add the core library source files here.
     src/core/asn1.c
     src/core/oid.c
+    src/core/x509_ext_tcg_dice_tcb_info.c
     src/core/x509.c
 )
 
@@ -49,6 +50,7 @@ set(LIBNAT20_PUB_HEADERS
     # These files will be included in the generation of the API documentation.
     include/nat20/asn1.h
     include/nat20/oid.h
+    include/nat20/x509_ext_tcg_dice_tcb_info.h
     include/nat20/x509.h
 )
 
@@ -56,6 +58,7 @@ set(LIBNAT20_TEST_SOURCES
     # Add test source files here.
     src/core/test/test.cpp
     src/core/test/asn1.cpp
+    src/core/test/x509_ext_tcg_dice_tcb_info.cpp
 )
 
 set(LIBNAT20_DOC_PAGES
