--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(LIBNAT20_SOURCES
     # Add the core library source files here.
     src/core/asn1.c
     src/core/oid.c
+    src/core/x509_ext_tcg_dice_tcb_freshness.c
     src/core/x509_ext_tcg_dice_tcb_info.c
     src/core/x509_ext_tcg_dice_ueid.c
     src/core/x509.c
@@ -52,6 +53,7 @@ set(LIBNAT20_PUB_HEADERS
     include/nat20/asn1.h
     include/nat20/crypto.h
     include/nat20/oid.h
+    include/nat20/x509_ext_tcg_dice_tcb_freshness.h
     include/nat20/x509_ext_tcg_dice_tcb_info.h
     include/nat20/x509_ext_tcg_dice_ueid.h
     include/nat20/x509.h
@@ -61,6 +63,7 @@ set(LIBNAT20_TEST_SOURCES
     # Add test source files here.
     src/core/test/test.cpp
     src/core/test/asn1.cpp
+    src/core/test/x509_ext_tcg_dice_tcb_freshness.cpp
     src/core/test/x509_ext_tcg_dice_tcb_info.cpp
     src/core/test/x509_ext_tcg_dice_ueid.cpp
 )
