[X509] Add OpenDICEInputs extension. (#35)
Add functionality to create the OpenDICEInputs X509 extension as defined
by
https://pigweed.googlesource.com/open-dice/+/HEAD/docs/specification.md

---------

Co-authored-by: Russell Seidel <rseidel@aurora.tech>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ set(LIBNAT20_SOURCES
     # Add the core library source files here.
     src/core/asn1.c
     src/core/oid.c
+    src/core/x509_ext_open_dice_input.c
     src/core/x509_ext_tcg_dice_tcb_freshness.c
     src/core/x509_ext_tcg_dice_tcb_info.c
     src/core/x509_ext_tcg_dice_ueid.c
@@ -53,6 +54,7 @@ set(LIBNAT20_PUB_HEADERS
     include/nat20/asn1.h
     include/nat20/crypto.h
     include/nat20/oid.h
+    include/nat20/x509_ext_open_dice_input.h
     include/nat20/x509_ext_tcg_dice_tcb_freshness.h
     include/nat20/x509_ext_tcg_dice_tcb_info.h
     include/nat20/x509_ext_tcg_dice_ueid.h
@@ -63,6 +65,7 @@ set(LIBNAT20_TEST_SOURCES
     # Add test source files here.
     src/core/test/test.cpp
     src/core/test/asn1.cpp
+    src/core/test/x509_ext_open_dice_input.cpp
     src/core/test/x509_ext_tcg_dice_tcb_freshness.cpp
     src/core/test/x509_ext_tcg_dice_tcb_info.cpp
     src/core/test/x509_ext_tcg_dice_ueid.cpp
