Factor out n20_asn1_stream into its own compilation unit.
Move n20_asn1_stream from asn1 to stream.
All symbols have been renames from n20_asn1_stream_* to
n20_stream_*.
Also the following functions have been renamed:

- n20_asn1_stream_data_written -> n20_stream_byte_count
- n20_asn1_stream_data_good -> n20_stream_has_buffer_overflow
- n20_asn1_stream_data_written_good ->
  n20_stream_hash_write_position_overflow

The latter two have changed there semantics such that their return
value is inverted. The documentation has been adjusted accordingly,
and the test has been moved to src/core/tests/stream.cpp.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(LIBNAT20_SOURCES
     # Add the core library source files here.
     src/core/asn1.c
     src/core/oid.c
+    src/core/stream.c
     src/core/x509_ext_open_dice_input.c
     src/core/x509_ext_tcg_dice_tcb_freshness.c
     src/core/x509_ext_tcg_dice_tcb_info.c
@@ -59,6 +60,7 @@ set(LIBNAT20_PUB_HEADERS
     include/nat20/asn1.h
     include/nat20/crypto.h
     include/nat20/oid.h
+    include/nat20/stream.h
     include/nat20/x509_ext_open_dice_input.h
     include/nat20/x509_ext_tcg_dice_tcb_freshness.h
     include/nat20/x509_ext_tcg_dice_tcb_info.h
@@ -70,6 +72,7 @@ set(LIBNAT20_TEST_SOURCES
     # Add test source files here.
     src/core/test/test.cpp
     src/core/test/asn1.cpp
+    src/core/test/stream.cpp
     src/core/test/x509_ext_open_dice_input.cpp
     src/core/test/x509_ext_tcg_dice_tcb_freshness.cpp
     src/core/test/x509_ext_tcg_dice_tcb_info.cpp
