Add generic sha-2 (224, 256, 384, 512) implementations for convenience. (#56)
Add generic implementations of SHA 224, 256, 384, and 512.
This is a service the integrator of proxy dice services. Those
may not need the full suite of crypto primitives as provided by
the `crypto.h` interface but they still might need to digest DICE 
inputs.

- [x] Add doxygen documentation.
- [x] Double check the generated docs

Note: In a followup PR this implementation is used to implement
the n20_crypto_digest_context_t. The it is subjected to all the
crypto unit tests of the n20 crypto suite.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,19 @@ set(LIBNAT20_PUB_HEADERS
     include/nat20/x509.h
 )
 
+set(LIBNAT20_CRYPTO_NAT20_SOURCES
+    # Add the core library source files here.
+    src/crypto/nat20/sha256.c
+    src/crypto/nat20/sha512.c
+)
+
+set(LIBNAT20_CRYPTO_NAT20_PUB_HEADERS
+    # Add the public headers here.
+    # These files will be included in the generation of the API documentation.
+    include/nat20/crypto/nat20/sha.h
+)
+
+
 set(LIBNAT20_TEST_SOURCES
     # Add test source files here.
     src/core/test/test.cpp
@@ -133,6 +146,30 @@ target_compile_options(nat20
 )
 
 target_include_directories(nat20
+    PUBLIC include
+)
+
+###################################################################################################
+
+###################################################################################################
+# The nat20_crypto_nat20 library implements some crypto
+# algorithms using the native C standard library.
+
+add_library(nat20_crypto_nat20 STATIC)
+
+target_sources(nat20_crypto_nat20
+    PRIVATE ${LIBNAT20_CRYPTO_NAT20_SOURCES}
+    INTERFACE ${LIBNAT20_CRYPTO_NAT20_PUB_HEADERS}
+)
+
+target_compile_options(nat20_crypto_nat20
+    PRIVATE -pedantic
+    PRIVATE -Wall
+    PRIVATE -Wextra
+    PRIVATE -Werror
+)
+
+target_include_directories(nat20_crypto_nat20
     PUBLIC include
 )
 
@@ -233,6 +270,9 @@ if (NAT20_WITH_TESTS)
     target_link_libraries(nat20_crypto_test_bin nat20_crypto_boringssl)
     add_definitions(-DN20_CONFIG_ENABLE_CRYPTO_TEST_IMPL=1)
 
+    target_link_libraries(nat20_crypto_test_bin nat20_crypto_nat20)
+
+
 endif() # NAT20_WITH_TESTS
 
 ###################################################################################################
@@ -252,6 +292,7 @@ if (NAT20_WITH_DOCS)
         ${LIBNAT20_PUB_HEADERS}
         ${LIBNAT20_DOC_PAGES}
         ${LIBNAT20_TEST_UTILS_HEADERS}
+        ${LIBNAT20_CRYPTO_NAT20_PUB_HEADERS}
     )
 
 endif() # NAT20_WITH_DOCS
